--- a/admin/index.html
+++ b/admin/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <script src="https://unpkg.com/netlify-cms@2.10.96/dist/netlify-cms.js"></script>
 </head>
 <body>
+    <!-- CMS Script: Ensure this is properly loaded -->
+    <script src="https://unpkg.com/netlify-cms-app@2.14.26/dist/netlify-cms.js"></script>
+
     <script>
-        CMS.init({ config: "/admin/config.yml" });
+        document.addEventListener("DOMContentLoaded", function () {
+            CMS.init({ config: "/admin/config.yml" });
+        });
     </script>
 </body>
 </html>
