--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
-
+    <title>Admin Dashboard</title>
     <!-- Load Firebase SDK from CDN -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 </head>
 <body>
-    <h2>Admin Login</h2>
-    <button id="googleLoginBtn">Login with Google</button>
+    <h2>Welcome to the Admin Dashboard</h2>
+    <button id="logoutBtn">Logout</button>
 
     <script type="module">
         // Import the functions you need from the SDKs you need
