--- a/admin/index.html
+++ b/admin/index.html
@@ -4,33 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-
-    <!-- Load Firebase SDK from CDN -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 </head>
 <body>
     <h2>Admin Login</h2>
     <button id="googleLoginBtn">Login with Google</button>
 
+    <!-- Firebase Authentication -->
     <script type="module">
-        // Import the functions you need from the SDKs you need
+        // ✅ Import Firebase Modules
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
+        import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
+
+        // ✅ Firebase Configuration
         const firebaseConfig = {
-          apiKey: "AIzaSyDQP5qixI-UfTROYCLCNdLHibfsH49Q6Sg",
-          authDomain: "signature-aesthetics.firebaseapp.com",
-          projectId: "signature-aesthetics",
-          storageBucket: "signature-aesthetics.firebasestorage.app",
-          messagingSenderId: "224020859017",
-          appId: "1:224020859017:web:8e3533d1123a4adf669e58"
+            apiKey: "AIzaSyDQP5qixI-UfTROYCLCNdLHibfsH49Q6Sg",
+            authDomain: "signature-aesthetics.firebaseapp.com",
+            projectId: "signature-aesthetics",
+            storageBucket: "signature-aesthetics.appspot.com",  // 🔥 Fixed typo
+            messagingSenderId: "224020859017",
+            appId: "1:224020859017:web:8e3533d1123a4adf669e58"
         };
-      
-        // Initialize Firebase
+
+        // ✅ Initialize Firebase
         const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const provider = new GoogleAuthProvider();
+
+        // ✅ Google Login Function
+        document.getElementById("googleLoginBtn").addEventListener("click", () => {
+            signInWithPopup(auth, provider)
+                .then((result) => {
+                    console.log("Logged in as:", result.user.email);
+                    window.location.href = "/admin/dashboard.html";  // ✅ Redirect to admin page
+                })
+                .catch((error) => {
+                    console.error("Login error:", error.message);
+                });
+        });
     </script>
 </body>
 </html>
