--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -4,32 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <!-- Load Firebase SDK from CDN -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 </head>
 <body>
     <h2>Welcome to the Admin Dashboard</h2>
     <button id="logoutBtn">Logout</button>
 
     <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-          apiKey: "AIzaSyDQP5qixI-UfTROYCLCNdLHibfsH49Q6Sg",
-          authDomain: "signature-aesthetics.firebaseapp.com",
-          projectId: "signature-aesthetics",
-          storageBucket: "signature-aesthetics.firebasestorage.app",
-          messagingSenderId: "224020859017",
-          appId: "1:224020859017:web:8e3533d1123a4adf669e58"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
+
+        // ✅ Firebase Authentication
+        const auth = getAuth();
+
+        // ✅ Check if User is Logged In
+        onAuthStateChanged(auth, (user) => {
+            if (!user) {
+                window.location.href = "/admin/index.html";  // ✅ Redirect to login if not authenticated
+            }
+        });
+
+        // ✅ Logout Button Function
+        document.getElementById("logoutBtn").addEventListener("click", () => {
+            signOut(auth).then(() => {
+                window.location.href = "/admin/index.html";
+            });
+        });
     </script>
 </body>
 </html>
