--- a/admin/index.html
+++ b/admin/index.html
@@ -34,8 +34,18 @@
         document.getElementById("googleLoginBtn").addEventListener("click", () => {
             signInWithPopup(auth, provider)
                 .then((result) => {
-                    console.log("Logged in as:", result.user.email);
-                    window.location.href = "/admin/dashboard.html";  // ✅ Redirect to admin page
+                    const user = result.user;
+                    const allowedEmail = "stephaniehallx@gmail.com";
+
+                    if (user.email === allowedEmail) {
+                        console.log("Logged in as:", result.user.email);
+                        window.location.href = "/admin/dashboard.html";  // ✅ Redirect to admin page
+                    } else {
+                        console.error("❌ Unauthorized user:", user.email);
+                        alert("Access Denied: You are not authorized to log in.");
+                        signOut(auth);
+                        window.location.href = "index.html"; // ✅ Redirect to login page
+                    }
                 })
                 .catch((error) => {
                     console.error("Login error:", error.message);
