--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,14 +15,18 @@
         // ✅ Firebase Authentication
         const auth = getAuth();
 
-        // ✅ Check if User is Logged In
+        // ✅ Protect the Admin Panel (Only Allow Your Sister)
+        const allowedEmail = "stephaniehallx@gmail.com";  // 🔥 Change this
+
         onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                window.location.href = "/admin/index.html";  // ✅ Redirect to login if not authenticated
+            if (!user || user.email !== allowedEmail) {
+                console.error("❌ Unauthorized access attempt");
+                alert("Access Denied: You are not authorized to view this page.");
+                window.location.href = "/admin/index.html";
             }
         });
 
-        // ✅ Logout Button Function
+        // ✅ Logout Button
         document.getElementById("logoutBtn").addEventListener("click", () => {
             signOut(auth).then(() => {
                 window.location.href = "/admin/index.html";
