Fixed Treamtments Section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="brand-name">Signature Aesthetics</p>
         </div>
         <div class="hero-buttons">
-            <a href="#services" class="cta-button">Explore Treatments</a>
+            <a href="#treatments" class="cta-button">Explore Treatments</a>
             <a href="YOUR_BOOKING_LINK" class="cta-outline">Book Now</a>
         </div>
     </section>
