--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
         <div class="hero-buttons fade-in">
             <a href="#treatments" class="cta-button">Explore Treatments</a>
+            <a href="#specials" class="cta-button">View Offers</a>
             <a href="YOUR_BOOKING_LINK" class="cta-outline">Book Now</a>
         </div>
     </section>
@@ -83,7 +84,7 @@
 
     <!-- ✅ Specials Section -->
     <section id="specials" class="section highlight bg-white">
-        <h2>Limited Time Specials</h2>
+        <h2>Limited Time Offers</h2>
         <p>Take advantage of our exclusive offers and seasonal discounts!</p>
         <div id="specials-container" class="specials-grid">
             <!-- Specials will be dynamically inserted here -->
