--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -14,14 +14,14 @@
 
     <div class="dashboard-container">
         <h2>Welcome to the Admin Dashboard</h2>
-        <button id="logoutBtn" class="cta-outline">Logout</button>
+        <button id="logoutBtn" class="delete-btn">Logout</button>
         <!-- ✅ Specials Management Section -->
         <div class="dashboard-section">
             <h3>Manage Specials</h3>
             <div id="specialsContainer" class="specials-list"></div>
             <button id="addSpecialBtn" class="add-button">
                 <i class="fa-plus"> </i>
-                Add New Special
+                Add New Offer
             </button>
         </div>
 
