--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- ✅ Link to Your Custom Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="styles1.css">
     
     <!-- ✅ FontAwesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -16,10 +16,10 @@
     <!-- Background Animation -->
     <style>
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
+            from { opacity: 0; transform: translateY(-50px); }
             to { opacity: 1; transform: translateY(0); }
         }
-        .fade-in { animation: fadeIn 1s ease-out; }
+        .fade-in { animation: fadeIn 2.5s ease-out; }
     </style>
 
      <!-- ✅ Load Firebase Setup -->
@@ -31,12 +31,12 @@
 
 <body>
     <!-- ✅ Hero Section with Matching Logo Styling -->
-    <section class="hero">
-        <div class="logo-container fade-in">
+    <section class="hero fade-in">
+        <div class="logo-container">
             <span class="sa">SA</span>
             <p class="brand-name">Signature Aesthetics</p>
         </div>
-        <div class="hero-buttons fade-in">
+        <div class="hero-buttons">
             <a href="#treatments" class="cta-button">Explore Treatments</a>
             <a href="#specials" class="cta-button">View Offers</a>
             <a href="YOUR_BOOKING_LINK" class="cta-outline">Book Now</a>
